fixed navbar right

--- a/css/custom.css
+++ b/css/custom.css
@@ -132,7 +132,7 @@
     margin-bottom: 0; }
   .navbar-item {
     position: relative;
-    float: left;
+    float: right;
     margin-bottom: 0; }
   .navbar-link {
     text-transform: uppercase;
